--- a/babystudyFrench.html
+++ b/babystudyFrench.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>儿童隐私保护声明 - 少儿西班牙语</title>
+    <title>儿童隐私保护声明 - 少儿法语</title>
     <style>
         * {
             margin: 0;
@@ -106,7 +106,7 @@
     </header>
 
     <main>
-        <p>欢迎使用[少儿西班牙语]（以下简称“本产品”）。本声明专为保护不满14周岁的未成年人（以下简称“儿童”）的个人信息制定，适用于儿童及其监护人（以下简称“家长”）使用本产品的所有服务。请家长仔细阅读，了解我们的信息处理规则及您的相关权利。</p>
+        <p>欢迎使用[少儿法语]（以下简称“本产品”）。本声明专为保护不满14周岁的未成年人（以下简称“儿童”）的个人信息制定，适用于儿童及其监护人（以下简称“家长”）使用本产品的所有服务。请家长仔细阅读，了解我们的信息处理规则及您的相关权利。</p>
 
         <section>
             <h2>一、适用范围与核心原则</h2>
