--- a/playWordsPrivacy.html
+++ b/playWordsPrivacy.html
@@ -66,6 +66,59 @@
   </div>
 
   <div class="section">
+    <h2>运营者基本情况</h2>
+    <p>根据相关法律法规要求，本应用由以下运营者提供：</p>
+
+    <div style="background-color: #f8f9fa; padding: 20px; border-radius: 8px; margin: 20px 0;">
+      <table style="width: 100%; border-collapse: collapse;">
+        <tr>
+          <td style="padding: 8px 0; font-weight: bold; width: 150px;">统一社会信用代码：</td>
+          <td style="padding: 8px 0;">91440300MA5GM5QK3M</td>
+        </tr>
+        <tr style="background-color: #ffffff;">
+          <td style="padding: 8px 0; font-weight: bold;">名 称：</td>
+          <td style="padding: 8px 0;">深圳市君道网络科技有限公司</td>
+        </tr>
+        <tr>
+          <td style="padding: 8px 0; font-weight: bold;">类 型：</td>
+          <td style="padding: 8px 0;">有限责任公司（自然人独资）</td>
+        </tr>
+        <tr style="background-color: #ffffff;">
+          <td style="padding: 8px 0; font-weight: bold;">法定代表人：</td>
+          <td style="padding: 8px 0;">姜峰</td>
+        </tr>
+        <tr>
+          <td style="padding: 8px 0; font-weight: bold;">成立日期：</td>
+          <td style="padding: 8px 0;">2021 年 03 月 02 日</td>
+        </tr>
+        <tr style="background-color: #ffffff;">
+          <td style="padding: 8px 0; font-weight: bold;">住 所：</td>
+          <td style="padding: 8px 0;">深圳市龙华区龙华街道油松社区油松路兴龙富创客园 B 栋一单元 5 楼 508</td>
+        </tr>
+        <tr>
+          <td style="padding: 8px 0; font-weight: bold;">登记机关：</td>
+          <td style="padding: 8px 0;">深圳市市场监督管理局</td>
+        </tr>
+        <tr style="background-color: #ffffff;">
+          <td style="padding: 8px 0; font-weight: bold;">登记日期：</td>
+          <td style="padding: 8px 0;">2024 年 06 月 03 日</td>
+        </tr>
+        <tr>
+          <td style="padding: 8px 0; font-weight: bold;">国家企业信用信息<br>公示系统网址：</td>
+          <td style="padding: 8px 0;"><a href="http://www.gsxt.gov.cn" target="_blank">http://www.gsxt.gov.cn</a></td>
+        </tr>
+      </table>
+    </div>
+
+    <p><strong>个人信息保护负责人：</strong></p>
+    <ul>
+      <li>联系人：姜峰</li>
+      <li>联系邮箱：<a href="mailto:huashifenxiao7@126.com">huashifenxiao7@126.com</a></li>
+      <li>办公地址：深圳市龙华区龙华街道油松社区油松路兴龙富创客园 B 栋一单元 5 楼 508</li>
+    </ul>
+  </div>
+
+  <div class="section">
     <h2>1. 我们收集的信息</h2>
 
     <h3>1.1 您主动提供的信息</h3>
