传感器列表

--- a/playWordsPrivacy-3.1.1.html
+++ b/playWordsPrivacy-3.1.1.html
@@ -159,7 +159,7 @@
     <h1>词汇闯关大师 - 学英语背单词</h1>
     <h1>隐私政策</h1>
     <div class="update-date">
-      <strong>最后更新日期：2025年1月7日</strong>
+      <strong>最后更新日期：2025年1月10日</strong>
     </div>
   </header>
 
@@ -244,6 +244,7 @@
       <p>本应用集成穿山甲（字节跳动）广告SDK，该SDK仅为实现广告展示服务收集信息，且仅在您同意本隐私政策后才会启动收集。该SDK遵循其自身隐私政策及相关法规，我们不会干预或获取该SDK收集的原始信息，具体收集信息如下：</p>
       <ul>
         <li><strong>设备标识类信息：</strong>OAID（安卓10+）、IMEI、MEID、Android ID、IMSI、MAC地址、设备型号、设备制造商、操作系统版本等（仅用于广告投放及反作弊验证）</li>
+        <li><strong>传感器信息：</strong>设备传感器列表、传感器状态等（仅用于设备特征识别和广告投放优化，不收集传感器具体数据）</li>
         <li><strong>网络类信息：</strong>IP地址、网络类型、运营商信息、Wi-Fi状态等（仅用于广告效果统计）</li>
         <li><strong>应用类信息：</strong>应用包名、应用版本、应用安装来源等（仅用于广告适配）</li>
         <li><strong>行为类信息：</strong>广告展示、点击行为，应用内操作行为等（仅用于广告精准投放和效果统计，您可随时关闭个性化广告）</li>
@@ -375,7 +376,7 @@
         <p><strong>邮箱：</strong><a href="mailto:huashifenxiao7@126.com">huashifenxiao7@126.com</a></p>
         <p><strong>客服微信：</strong>17741138408</p>
         <p><strong>应用版本：</strong>v3.1.1</p> <!-- 已更新为v3.1.1 -->
-        <p><strong>最后更新：</strong>2025年1月7日</p>
+        <p><strong>最后更新：</strong>2025年1月10日</p>
       </div>
       <p>如您对穿山甲SDK的信息收集有疑问，也可直接联系穿山甲官方客服：<a href="https://www.pangle.cn/contact" target="_blank" rel="noopener noreferrer">https://www.pangle.cn/contact</a></p>
     </section>
