--- a/BabyStudySeaWorld.html
+++ b/BabyStudySeaWorld.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>儿童隐私保护声明 - 味海洋淡水动物百科-海豚、水母、娃娃鱼</title>
+    <title>儿童隐私保护声明 - 味海洋淡水动物百科</title>
     <style>
         * {
             margin: 0;
